--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -36,7 +36,7 @@
 
 \lstset{
    language=C++,
-   emph={QPainter,QRegion,RenderFlags,QPaintEngineState,QPaintEngine,Qt,QTextItem,QRect,QRectF,QPoint,QPointF,QLine,QLineF,QEllipse,QPainterPath,QPixmap,QImage},
+   emph={Type,PolygonDrawMode,ImageConversionFlags,QPaintDevice,QPainter,QRegion,RenderFlags,QPaintEngineState,QPaintEngine,Qt,QTextItem,QRect,QRectF,QPoint,QPointF,QLine,QLineF,QEllipse,QPainterPath,QPixmap,QImage},
    emphstyle={\color{RedViolet}\bfseries}
 }
 
