--- a/thesis/implementation/render.tex
+++ b/thesis/implementation/render.tex
@@ -6,9 +6,9 @@ Biblioteka \emph{Qt} nie umożliwia pobrania informacji o wyglądzie elementu be
 
 Klasa \emph{QPaintDevice} opisuje wirtualne urządzenie, na którym dokonywane jest renderowanie elementu. Jej implementacja w projekcie nie zawiera żadnej logiki. Informuje jedynie pozostałe elementy systemu o typie, maksymalnym rozmiarze i stosowanej jednostce miary wirtualnego urządzenia. 
 
-Klasa \emph{QPaintEngine}, zgodnie z założeniami biblioteki \emph{Qt}, jest odpowiedzialna za rysowanie na obiekcie \emph{QPaintDevice}. Udostępnia więc szereg metod dokonujących rysowania podstawowych elementów takich jak linie, okręgi czy krzywe oraz umożliwia ustawienie palety kolorów i przekształceń geometrycznych. W projekcie metody te zaimplementowano w taki sposób aby zapisywały informacje o rysowanych elementach w formacie dnych do przesłania klientowi. Informacje te są przetrzymywane w buforze a po jego zapełnieniu są przekazywane klientowi. W rzeczywistości elementy nie są nigdzie rysowane po stronie serwera, lecz zbierane są jedynie dane pozwalające na odtworzenie interfejsu aplikajcji po stronie klienta. Poniżej przedstawiono implementację klasy \emph{QPaintEngine} zawierającą listę wszystkich dostępnych metod.
+Klasa \emph{QPaintEngine}, zgodnie z założeniami biblioteki \emph{Qt}, jest odpowiedzialna za rysowanie na obiekcie \emph{QPaintDevice}. Udostępnia więc szereg metod dokonujących rysowania podstawowych elementów takich jak linie, okręgi czy krzywe oraz umożliwia ustawienie palety kolorów i przekształceń geometrycznych. W projekcie metody te zaimplementowano w taki sposób aby zapisywały informacje o rysowanych elementach w formacie dnych do przesłania klientowi. Informacje te są przetrzymywane w buforze a po jego zapełnieniu są przekazywane klientowi i w rzeczywistości elementy nie są nigdzie rysowane po stronie serwera. Poniżej przedstawiono nagłówek klasy \emph{QPaintEngine} zawierającą listę wszystkich dostępnych metod.
 
-\begin{lstlisting}[language=C++,numbers=none,caption=Implementacja klasy \emph{QPaintEngine}]
+\begin{lstlisting}[language=C++,numbers=left,caption=Nagłówek klasy \emph{QPaintEngine}]
 class PaintEngine : public QPaintEngine
 {
     public:
