--- a/thesis/implementation/render.tex
+++ b/thesis/implementation/render.tex
@@ -29,8 +29,10 @@ class PaintEngine : public QPaintEngine
         virtual void drawPixmap(const QRectF & r, 
                                 const QPixmap & pm, 
                                 const QRectF & sr);
-        virtual void drawPoints(const QPointF * points, int pointCount);
-        virtual void drawPoints(const QPoint * points, int pointCount);
+        virtual void drawPoints(const QPointF * points, 
+                                int pointCount);
+        virtual void dawPoints(const QPoint * points, 
+                                int pointCount);
         virtual void drawPolygon(const QPointF * points, 
                                  int pointCount, 
                                  PolygonDrawMode mode);
