--- a/thesis/implementation/events.tex
+++ b/thesis/implementation/events.tex
@@ -1,4 +1,4 @@
-Po stronie przeglądarki przechwytywane są wszystkie zdarzenia myszy oraz klawiatury. Każde zdarzenie jest zamieniane na obiekt \emph{JSON} i wysyłane do serwera przy użyciu \emph{Websocket}. Dodatkowo przesyłane są zdarzenia dotyczące manipulacji oknami -- zdarzenia zmiany rozmiary, zamknięcia oraz aktywacji okna. Serwer na podstawie otrzymanych danych tworzy i wstawia zdarzenia do pętli zdarzeń (ang. event loop). W ten sposób z poziomu przeglądarki możliwa jest całkowita kontrola aplikacji, dla końcowego użytkownika równoważna funkcjonalnie z pracą na zdalnym urządzeniu.
+Po stronie przeglądarki przechwytywane są wszystkie zdarzenia myszy oraz klawiatury. Każde zdarzenie jest zamieniane na obiekt \emph{JSON} i wysyłane do serwera przy użyciu \emph{Websocket}. Dodatkowo przesyłane są zdarzenia dotyczące manipulacji oknami -- zdarzenia zmiany rozmiaru, zamknięcia oraz aktywacji okna. Serwer na podstawie otrzymanych danych tworzy i wstawia zdarzenia do pętli zdarzeń (ang. event loop). W ten sposób z poziomu przeglądarki możliwa jest całkowita kontrola aplikacji, dla końcowego użytkownika równoważna funkcjonalnie z pracą na zdalnym urządzeniu.
 
 W zdarzeniach myszy oraz klawiatury wszystkie przekazywane wartości są zgodne z wewnętrznym systemem zdarzeń Qt, przez co nie jest wymagana dodatkowa konwersja po stronie serwera. Wszystkie wartości pozycji, szerokości i wysokości określone są w pikselach.
 
