--- a/thesis/implementation/events/mouse.tex
+++ b/thesis/implementation/events/mouse.tex
@@ -87,8 +87,8 @@ W zdarzeniach myszy używane są następujące pola:
   "y": 0.0,
   "btn": 0x00000002,       // Qt::RightButton
   "modifiers": 0x00000000  //  Qt::NoModifier
-  "delta": 120,        // Zmiana polozenia
-  "orientation": 0x    // 0x1 Qt::Horizontal
-                       // 0x2 Qt::Vertical
+  "delta": 120,         // Zmiana polozenia
+  "orientation": 0x1    // 0x1 Qt::Horizontal
+                        // 0x2 Qt::Vertical
 }
 \end{lstlisting} 
