--- a/thesis/implementation/render.tex
+++ b/thesis/implementation/render.tex
@@ -1,12 +1,12 @@
-Renderowanie jest operacją realizowaną za każdym razem gdy wykryta zostania zmiana dowolnego elementu interfejsu użytkownika. W standardowej aplikacji do kolejki zdarzeń trafia informacja o konieczności odświeżenia widoku aby w kolejnym kroku narysować odświeżany element na ekranie. 
+Renderowanie jest operacją realizowaną za każdym razem gdy wykryta zostania zmiana dowolnego elementu interfejsu użytkownika. W standardowej aplikacji do kolejki zdarzeń trafia informacja o konieczności odświeżenia widoku aby w kolejnym kroku narysować wybrany element na ekranie. 
 
-W niniejszej pracy ze względu na konieczność rysowania interfejsu aplikacji na zdalnej maszynie konieczne jest przechwycenie informacji z kolejki zdarzeń o zmianie parametrów widgeta oraz utworzenie opisu jego wyglądu w wykorzystywanym formacie wymiany informacji. Szczegóły struktur danych, ich opis oraz sposoby przetwarzania zostały opisane w sekcji \ref{data_protocol}.
+W projekcie ze względu na konieczność rysowania interfejsu aplikacji na zdalnej maszynie konieczne jest przechwycenie informacji z kolejki zdarzeń o zmianie parametrów widgeta oraz utworzenie opisu jego wyglądu w wykorzystywanym formacie wymiany informacji. Szczegóły struktur danych, ich opis oraz sposoby przetwarzania zostały opisane w sekcji \ref{data_protocol}.
 
 Biblioteka \emph{Qt} nie umożliwia pobrania informacji o wyglądzie elementu bezpośrednio. Należało więc wykorzystać wewnętrzny mechanizm rysowania. Dokonano to poprzez zaimplementowanie dwóch klas dziedziczących po \emph{QPaintDevice} oraz \emph{QPaintEngine}. 
 
 Klasa \emph{QPaintDevice} opisuje wirtualne urządzenie, na którym dokonywane jest renderowanie elementu. Jej implementacja w projekcie nie zawiera żadnej logiki. Informuje jedynie pozostałe elementy systemu o typie, maksymalnym rozmiarze i stosowanej jednostce miary wirtualnego urządzenia. 
 
-Klasa \emph{QPaintEngine}, zgodnie z założeniami biblioteki \emph{Qt}, jest odpowiedzialna za rysowanie na obiekcie \emph{QPaintDevice}. Udostępnia więc szereg metod dokonujących rysowania podstawowych elementów takich jak linie, okręgi czy krzywe oraz umożliwia ustawienie palety kolorów i przekształceń geometrycznych. W projekcie metody te zaimplementowano w taki sposób aby zapisywały informacje o rysowanych elementach w formacie dnych do przesłania klientowi. Informacje te są przetrzymywane w buforze a po jego zapełnieniu są przekazywane klientowi i w rzeczywistości elementy nie są nigdzie rysowane po stronie serwera. Poniżej przedstawiono nagłówek klasy \emph{QPaintEngine} zawierającą listę wszystkich dostępnych metod.
+Klasa \emph{QPaintEngine}, zgodnie z założeniami biblioteki \emph{Qt}, jest odpowiedzialna za rysowanie na obiekcie \emph{QPaintDevice}. Udostępnia więc szereg metod dokonujących rysowania podstawowych elementów takich jak linie, okręgi czy krzywe oraz umożliwia ustawienie palety kolorów i przekształceń geometrycznych. W projekcie metody te zaimplementowano w taki sposób aby zapisywały informacje o rysowanych elementach w formacie dnych do przesłania klientowi. Informacje te są przetrzymywane w buforze a po jego zapełnieniu są przekazywane klientowi i w rzeczywistości elementy nie są w ogóle rysowane po stronie serwera. Poniżej przedstawiono nagłówek klasy \emph{QPaintEngine} zawierającą listę wszystkich dostępnych metod.
 
 \begin{lstlisting}[language=C++,numbers=left,caption=Nagłówek klasy \emph{QPaintEngine}]
 class PaintEngine : public QPaintEngine
