--- a/thesis/implementation/events.tex
+++ b/thesis/implementation/events.tex
@@ -15,9 +15,9 @@ W rozdziale przedstawiono przykłady przesyłanych obiektów \emph{JSON} wraz z 
 
 W zdarzeniach okien używane są następujące pola:
 \begin{itemize}
-\item id -- tak jak w przypadku eventów myszy liczba będąca identyfikatorem widgetu, którego dotyczy zdarzenie
-\item w -- wysokość
-\item h -- szerokość
+\item id -- tak jak w przypadku eventów myszy liczba będąca identyfikatorem widgetu, którego dotyczy zdarzenie,
+\item w -- wysokość,
+\item h -- szerokość.
 \end{itemize}
 
 \subsubsection{Zmiana rozmiaru okna}
