--- a/thesis/implementation/server_details.tex
+++ b/thesis/implementation/server_details.tex
@@ -22,7 +22,7 @@ Takie rozwiązanie zapewnia:
 \end{itemize}
 
 \subsection{Wpinanie się do aplikacji Qt i komunikacja z serwerem}
-Jednym z głównych założeń projektu jest brak konieczności rekompilacji jakichkolwiek aplikacji i bibliotek, w tym \emph{Qt}. Przy tak postawionym warunku jedyną możliwością wykonywania kodu w aplikacji jest użycie wstrzyknięcie własnej biblioteki DLL (ang. DLL injection). Technika ta jest używana do wykonania kodu wstrzykiwanej biblioteki w miejsce oryginalnego kodu innych bibliotek, które normalnie wywołuje program.
+Jednym z głównych założeń projektu jest brak konieczności rekompilacji jakichkolwiek aplikacji i bibliotek, w tym \emph{Qt}. Przy tak postawionym warunku jedyną możliwością wykonywania kodu w aplikacji jest użycie wstrzyknięcie własnej biblioteki DLL (ang. DLL injection). Technika ta jest używana do wykonania kodu wstrzykiwanej biblioteki w miejsce oryginalnego kodu innych bibliotek, które normalnie wywołuje program. W systemie \emph{Linux} zastosowanie tej techniki jest bardzo proste przy pomocy bardzo prostego mechanizmu \emph{LD\_PRELOAD}\footnote{Dokładny opis dostępny w manualu \emph{ld.so(8)}.}.
 
 Dogłębna analiza kodu źródłowego biblioteki \emph{Qt} pomogła znaleźć funkcję \emph{qt\_startup\_hook} stworzoną specjalnie do nadpisywania i  wstrzykiwania własnego kodu do programów opartych o \emph{Qt}.
 Funkcja ta nie jest opisana w dokumentacji frameworka i poznanie jej możliwe jest tylko poprzez analizę kodu źródłowego \emph{Qt}. Funkcja \emph{qt\_startup\_hook} jest wywołana na końcu konstruktora \emph{QCoreApplication}, którego używa każda aplikacja oparta o \emph{Qt}. W momencie jej wykonania rdzeń aplikacji jest w pełni zainicjalizowany, dzięki czemu możliwe jest jego użycie.
