--- a/thesis/introduction/introduction.tex
+++ b/thesis/introduction/introduction.tex
@@ -5,10 +5,7 @@ W niektórych rozwiązaniach zastąpienie starych aplikacji desktopowych nowymi 
 
 Podczas badań rynku pod kątem aktualnie dostępnych technologii dostrzeżono braki w rozwiązaniach umożliwiających zdalną interakcję z pojedynczymi aplikacjami. Większość z rozwiązań dostępnych na rynku wymusza udostępnienie całego pulpitu oraz wymaga od użytkownika końcowego (klienta) posiadania odpowiedniego, nierzadko płatnego oprogramowania (np. TeamViewer, VNC, Citrix, X11 i inne). Celem projektu jest stworzenie alternatywy wymagającej od strony klienta jedynie przeglądarki obsługującej HTML5 bez konieczności instalacji jakichkolwiek pluginów (np. Java, Flash).
 
-Głównym wzorcem dla tej pracy jest projekt GTK+ Broadway powstały w 2011 roku oferujący dostęp przez przeglądarkę internetową do aplikacji działających pod kontrolą biblioteki GTK na zdalnym serwerze. Do tej pory nie istniało rozwiązanie oferujące podobną funkcjonalność dla biblioteki Qt i stworzony na potrzeby tej pracy projekt jest pierwszą taką implementacją. Kluczowym czynnikiem wyróżniającym tę pracę na tle innych jest innowacyjny sposób przesyłu danych do wizualizacji okien i ich elementów, który nie opieraja się na transmisji bitmap.
+Głównym wzorcem dla tej pracy jest projekt GTK+ Broadway powstały w 2011 roku oferujący dostęp przez przeglądarkę internetową do aplikacji działających pod kontrolą biblioteki GTK na zdalnym serwerze. Do tej pory nie istniało rozwiązanie oferujące podobną funkcjonalność dla biblioteki Qt i stworzony na potrzeby tej pracy projekt jest pierwszą taką implementacją. Kluczowym czynnikiem wyróżniającym tę pracę na tle innych jest innowacyjny sposób przesyłu danych do wizualizacji okien i ich elementów, który nie opieraja się na transmisji bitmap. Zamiast pełnych bitmap przesyłane są informacje sterującę rysowaniem pochodzące z silnika renderującego QT.
+Takie rozwiązanie wykorzysta pełne możliwości elementu \emph{canvas} z HTML5 i pozwoli na przetestowanie praktycznej implementacji większości dostępnych funkcjonalności.
 
-// TODO: Jak?
-// TODO: Po co?
-
-
-
+// TODO - streszczenie kolejnych rozdzialow?
